test: Alterações para utilizar masi de 4 assertivas diferentes