@@ -3,12 +3,15 @@ package br.com.prodsys.produto.service;
 import br.com.prodsys.product.entities.Product;
 import br.com.prodsys.product.repository.ProductIRepository;
 import br.com.prodsys.product.service.ProductService;
+
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
+
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
@@ -56,22 +59,20 @@ public class ProductServiceTest {
      */
     @Test
     void findAll() {
-        // Criação do pageable com tamanho 10 e página inicial 0
         Pageable pageable = PageRequest.of(0, 10);
         List<Product> products = new ArrayList<>();
         products.add(product);
-
-        // Criação de uma página de produtos com um único produto
         Page<Product> page = new PageImpl<>(products);
 
-        // Definindo o comportamento esperado do repositório mockado
         when(productIRepository.findAll(pageable)).thenReturn(page);
 
-        // Chamando o método e verificando os resultados
         Page<Product> result = productService.findAll(pageable);
-        assertEquals(1, result.getTotalElements()); // Verifica o total de produtos
-        assertEquals("Produto 1", result.getContent().get(0).getName()); // Verifica o nome do produto
-        verify(productIRepository, times(1)).findAll(pageable); // Verifica se o método foi chamado uma vez
+        assertEquals(1, result.getTotalElements());
+        assertEquals("Produto 1", result.getContent().getFirst().getName());
+        assertNotNull(result.getContent());
+        assertFalse(result.getContent().isEmpty());
+
+        verify(productIRepository, times(1)).findAll(pageable);
     }
 
     /**
@@ -83,8 +84,13 @@ public class ProductServiceTest {
         when(productIRepository.save(product)).thenReturn(product);
 
         Product result = productService.save(product);
-        assertEquals("Produto 1", result.getName()); // Verifica o nome do produto salvo
-        verify(productIRepository, times(1)).save(product); // Verifica a chamada ao método save
+
+        assertEquals("Produto 1", result.getName());
+        assertNotNull(result);
+        assertFalse(result.getName().isEmpty());
+        assertEquals(100, result.getAmount());
+
+        verify(productIRepository, times(1)).save(product);
     }
 
     /**
@@ -96,7 +102,12 @@ public class ProductServiceTest {
         when(productIRepository.save(product)).thenReturn(product);
 
         Product result = productService.update(product);
+
         assertEquals("Produto 1", result.getName());
+        assertNotNull(result);
+        assertTrue(result.getPrice() > 0);
+        assertEquals(1L, result.getId());
+
         verify(productIRepository, times(1)).save(product);
     }
 
@@ -109,6 +120,10 @@ public class ProductServiceTest {
         doNothing().when(productIRepository).delete(product);
 
         productService.delete(product);
+
+        assertNull(null);
+        assertDoesNotThrow(() -> productService.delete(product));
+
         verify(productIRepository, times(1)).delete(product);
     }
 
